add_executable(breakpoints breakpoints.cpp)
set_property(TARGET breakpoints PROPERTY CXX_STANDARD 17)
set_property(TARGET breakpoints PROPERTY CXX_STANDARD_REQUIRED On)

add_executable(callstacks callstacks.cpp)
set_property(TARGET breakpoints PROPERTY CXX_STANDARD 17)
set_property(TARGET breakpoints PROPERTY CXX_STANDARD_REQUIRED On)
